<resources>
	<string name="app_name">PosPrinter</string>
    <string name="please_insert_card">Please insert card</string>
    <string name="please_swipe_card">Please swipe card</string>
    <string name="please_swipe_insert_card">Please swipe/insert card</string>
    <string name="please_tap_card">Please tap card</string>
    <string name="please_swipe_tap_card">Please swipe/tap card</string>
    <string name="please_insert_tap_card">Please insert/tap card</string>
    <string name="please_swipe_insert_tap_card">Please swipe/insert/tap card</string>
    <string name="no_card_detected">No card detected</string>
    <string name="icc_card_inserted">ICC Card Inserted</string>
    <string name="card_inserted">Card Inserted (Not ICC). Please swipe card</string>
    <string name="bad_swipe">Bad Swipe</string>
    <string name="card_swiped">Card Swiped: </string>
    <string name="mag_head_fail">Magnetic head fail</string>
    <string name="card_no_response">Check card no response</string>
    <string name="card_swiped_track2_only">Card Swiped (Track 2 only):\n</string>
    <string name="use_icc_card">Please use ICC card</string>
    <string name="tap_card_detected">Tap card detected</string>
    <string name="format_id">Format ID: </string>
    <string name="masked_pan">Masked PAN: </string>
    <string name="pan">PAN:</string>
    <string name="expiry_date">Expiry Date: </string>
    <string name="cardholder_name">Cardholder Name: </string>
    <string name="ksn">KSN: </string>
    <string name="epb">EPB: </string>
    <string name="service_code">Service Code: </string>
    <string name="track_1">Track 1</string>
    <string name="track_2">Track 2</string>
    <string name="track_3">Track 3</string>
    <string name="track_1_length">Track 1 Length: </string>
    <string name="track_2_length">Track 2 Length: </string>
    <string name="track_3_length">Track 3 Length: </string>
    <string name="encrypted_tracks">Encrypted Tracks: </string>
    <string name="encrypted_track_1">Encrypted Track 1: </string>
    <string name="encrypted_track_2">Encrypted Track 2: </string>
    <string name="encrypted_track_3">Encrypted Track 3: </string>
    <string name="track_1_status">Track 1 Status: </string>
    <string name="track_2_status">Track 2 Status: </string>
    <string name="track_3_status">Track 3 Status: </string>
    <string name="partial_track">Partial Track: </string>
    <string name="product_type">Product Type:</string>
    <string name="final_message">Final Message:</string>
    <string name="random_number">Random Number:</string>
    <string name="encrypted_working_key">Encrypted Working Key:</string>
    <string name="mac">MAC:</string>
    <string name="card_data">Card Data: </string>
    <string name="start_emv_fail">Start EMV failed</string>
    <string name="start_emv_success">Start EMV success</string>
    <string name="app_version">App Version: </string>
    <string name="bootloader_version">Bootloader Version: </string>
    <string name="bootloader_id">Bootloader ID: </string>
    <string name="firmware_version">Firmware Version: </string>
    <string name="firmware_id">Firmware ID: </string>
    <string name="main_processor_version">Main Processor Version: </string>
    <string name="coprocessor_version">Coprocessor Version: </string>
    <string name="coprocessor_bootloader_version">Coprocessor Bootloader Version: </string>
    <string name="usb">USB: </string>
    <string name="charge">Charge: </string>
    <string name="battery_level">Battery Level: </string>
    <string name="battery_percentage">Battery Percentage:</string>
    <string name="backup_battery_voltage">Backup Battery Voltage:</string>
    <string name="hardware_version">Hardware Version: </string>
    <string name="supported_track">Supported Track: </string>
    <string name="track_1_supported">Track 1 Supported: </string>
    <string name="track_2_supported">Track 2 Supported: </string>
    <string name="track_3_supported">Track 3 Supported: </string>
    <string name="power_saving_supported">Power Saving Supported: </string>
    <string name="software_pinpad_supported">Software PinPad Supported: </string>
    <string name="product_id">Product ID:</string>
    <string name="pin_ksn">PIN KSN: </string>
    <string name="emv_ksn">EMV KSN: </string>
    <string name="track_ksn">Track KSN: </string>
    <string name="mac_ksn">MAC KSN: </string>
    <string name="nfc_ksn">NFC KSN: </string>
    <string name="message_ksn">Message KSN: </string>
    <string name="csn">CSN: </string>
    <string name="uid">UID: </string>
    <string name="vendor_id">Vendor ID:</string>
    <string name="vendor_id_hex">Vendor ID (HEX):</string>
    <string name="vendor_id_ascii">Vendor ID (ASCII):</string>
    <string name="terminal_setting_version">Terminal Setting Version:</string>
    <string name="device_setting_version">Device Setting Version:</string>
    <string name="serial_number">Serial Number:</string>
    <string name="model_name">Model Name: </string>
    <string name="unknown">Unknown</string>
    <string name="set_amount">Set Amount</string>
    <string name="enter_pin">Please enter PIN</string>
    <string name="enter_pin_on_keypad">Please enter PIN on keypad</string>
    <string name="online_process_requested">Online process requested.</string>
    <string name="request_data_to_server">Request data to server.</string>
    <string name="replied_connected">Replied connected.</string>
    <string name="replied_success">Replied success.</string>
    <string name="replied_failed">Replied failed.</string>
    <string name="batch_data">Batch Data:\n</string>
    <string name="transaction_log">Transaction Log:\n</string>
    <string name="load_log">Load Log:\n</string>
    <string name="reversal_data">Reversal Data:\n</string>
    <string name="please_select_app">Please select app</string>
    <string name="please_select_account_type">Please select account type</string>
    <string name="transaction_result">Transaction Result</string>
    <string name="transaction_approved">Approved</string>
    <string name="transaction_terminated">Terminated</string>
    <string name="transaction_declined">Declined</string>
    <string name="transaction_cancel">Cancel</string>
    <string name="transaction_capk_fail">Fail (CAPK fail)</string>
    <string name="transaction_not_icc">Fail (Not ICC card)</string>
    <string name="transaction_app_fail">Fail (App fail)</string>
    <string name="transaction_device_error">Device Error</string>
    <string name="transaction_application_blocked">Application Blocked</string>
    <string name="transaction_icc_card_removed">ICC card removed</string>
    <string name="transaction_card_blocked">Card blocked</string>
    <string name="transaction_card_not_supported">Card not support</string>
    <string name="transaction_condition_not_satisfied">Condition of use not satisfied</string>
    <string name="transaction_invalid_icc_data">Invalid ICC data</string>
    <string name="transaction_missing_mandatory_data">Missing mandatory data</string>
    <string name="transaction_no_emv_apps">No EMV apps</string>
    <string name="tlv_list">TLV List:\n</string>
    <string name="advice_process">Advice Process.</string>
    <string name="call_your_bank">Please call your bank</string>
    <string name="request_terminal_time">Request Terminal Time. Replied </string>
    <string name="confirm_amount">Confirm amount</string>
    <string name="amount">Amount</string>
    <string name="amount_ok">Amount OK?</string>
    <string name="approved">Approved</string>
    <string name="cancel_or_enter">Cancel or Enter</string>
    <string name="card_error">Card error</string>
    <string name="declined">Declined</string>
    <string name="enter_amount">Please enter amount</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="insert_card">Please insert card</string>
    <string name="not_accepted">Not accepted</string>
    <string name="pin_ok">PIN OK</string>
    <string name="wait">Please wait&#8230;</string>
    <string name="processing_error">Processing error</string>
    <string name="remove_card">Please remove card</string>
    <string name="use_chip_reader">Please use chip reader</string>
    <string name="use_mag_stripe">Please use mag stripe</string>
    <string name="try_again">Please try again</string>
    <string name="refer_payment_device">Please refer to your payment device</string>
    <string name="try_another_interface">Please try another interface</string>
    <string name="online_required">Online required</string>
    <string name="processing">Processing&#8230;</string>
    <string name="welcome">Welcome</string>
    <string name="present_one_card">Please present only one card</string>
    <string name="capk_failed">CAPK loading failed</string>
    <string name="last_pin_try">Last PIN try</string>
    <string name="select_account">Please select account</string>
    <string name="insert_or_tap_card">Please insert or tap card</string>
    <string name="approved_please_sign">Approved. Please sign</string>
    <string name="tap_card_again">Please tap card again</string>
    <string name="authorising">Authorising&#8230;</string>
    <string name="insert_or_swipe_card_or_tap_another_card">Please insert, swipe or try another card</string>
    <string name="insert_swipe_or_try_another_card">Please insert, swipe or try another card</string>
    <string name="insert_or_swipe_card">Please insert or swipe card</string>
    <string name="multiple_cards_detected">Multiple card detected</string>
    <string name="application_expired">Application expired</string>
    <string name="show_thank_you">Show thank you</string>
    <string name="pin_try_limit_exceeded">PIN try limit exceeded</string>
    <string name="final_confirm">Final Confirm</string>
    <string name="battery_low">Device battery low, please charge</string>
    <string name="battery_critically_low">Device battery critically low and powered off</string>
    <string name="no_device_detected">No device detected.</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="start">Start</string>
    <string name="init_session">Initialize session</string>
    <string name="remote_key_injection">Remote Key Injection</string>
    <string name="remote_firmware_update">Remote Firmware Update</string>
    <string name="remote_config_update">Remote Config Update</string>
    <string name="remote_customized_config_update">Remote Customized Config Update</string>
    <string name="remote_firmware_update_with_data">Remote Firmware Update (local HEX)</string>
    <string name="remote_config_update_with_data">Remote Config Update (local HEX)</string>
    <string name="local_firmware_update">Local Firmware Update</string>
    <string name="local_config_update">Local Config Update</string>
    <string name="device_info">Device Info</string>
    <string name="get_target_version">Get Target Version</string>
    <string name="get_target_version_list">Get Target Version List</string>
    <string name="set_target_version">Set Target Version</string>
    <string name="ota_server_url">OTA Server URL</string>
    <string name="vendor_id_2">Vendor ID</string>
    <string name="vendor_secret">Vendor Secret</string>
    <string name="app_id">App ID</string>
    <string name="app_secret">App Secret</string>
    <string name="main_processor">Main Processor</string>
    <string name="coprocessor">Coprocessor</string>
    <string name="tips_amount_tips_percentage_cashback">Tips Amount/Tips Percent/Cashback</string>
    <string name="printer_not_connect">Printer had not connected</string>
    <string name="pos_not_connect">POS device not connect</string>
    <string name="transaction_page_title">MPOS PRINTING DEMO</string>
    <string name="transaction_amount_to_pay">AMOUNT TO PAY</string>
    <string name="transaction_start">START</string>
</resources>