<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <TextView
	        android:layout_weight="1"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:text="@string/ota_server_url" />
	    
	    <EditText
	        android:id="@+id/otaServerUrlEditText"
	        android:layout_weight="1"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:textSize="12sp" />
	    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/vendorIDTextView"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vendor_id_2" />

        <EditText
            android:id="@+id/vendorIDEditText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/appIDTextView"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_id" />

        <EditText
            android:id="@+id/appIDEditText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/vendorSecretTextView"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vendor_secret" />

        <EditText
            android:id="@+id/vendorSecretEditText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/appSecretTextView"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_secret" />

        <EditText
            android:id="@+id/appSecretEditText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <Button
	        android:id="@+id/confirmButton"
	        android:layout_weight="1"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:text="@string/confirm" />
	    
	    <Button
	        android:id="@+id/cancelButton"
	        android:layout_weight="1"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel" />
	    
    </LinearLayout>
    
</LinearLayout>
