<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        
        <RadioButton 
            android:id="@+id/mainProcessorRadioButton"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/main_processor" />
        
        <RadioButton 
            android:id="@+id/coprocessorRadioButton"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/coprocessor" />
        
    </RadioGroup>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button
	        android:id="@+id/cancelButton"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/cancel" />
        
    </LinearLayout>
        
</LinearLayout>