<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/modelTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/tipsAmountTipsPercentageCashbackCheckBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tips_amount_tips_percentage_cashback" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:editable="false"
            android:visibility="invisible"
            android:gravity="center" />
        <EditText
            android:id="@+id/printerText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:text = "@string/printer_not_connect"
            android:editable="false" />
        <EditText
            android:id="@+id/posText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:text = "@string/pos_not_connect"
            android:editable="false" />

        <EditText
            android:id="@+id/statusEditText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:editable="false" />
    </LinearLayout>

</LinearLayout>